# harkai-web

./: .gitignore  Makefile
backend/: daphne.service  makefile  manage.py  pyproject.toml  requirements.txt  secrets.yml.enc
backend/app/: apps.py  consumers.py  helpers.py  prompt.txt  prompts.py  routing.py  tasks.py  views.py
backend/harkaibackend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
frontend/: instructions.md  package-lock.json  package.json
frontend/src/app/: layout.tsx  not-found.js
frontend/src/app/zendesk/: page.tsx
