[tool.poetry]
name = "harkai-web"
version = "0.1.0"
description = ""
authors = ["Chetan Malhotra <malhotra_chetan@icloud.com>"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.10.12"
google-cloud-texttospeech = "^2.16.5"
pydub = "^0.25.1"
moviepy = "^1.0.3"
google-generativeai = "^0.7.2"
flask = "^3.0.3"
boto3 = "^1.34.157"
botocore = "^1.34.157"
flask-cors = "^4.0.1"
gunicorn = "^22.0.0"
opencv-python = "^4.10.0.84"
numpy = "^2.0.1"
django-encrypted-secrets = "^0.9.9"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.4.0"
django = "^5.1"
django-celery-beat = "^2.7.0"
celery = {extras = ["redis"], version = "^5.4.0"}
ifaddr = "^0.2.0"
drf-firebase-auth = "^1.0.0"
graphqlclient = "^0.2.4"
channels = {extras = ["daphne"], version = "^4.1.0"}
channels-redis = "^4.2.0"
watchdog = {extras = ["watchmedo"], version = "^5.0.2"}
certifi = "^2024.8.30"
azure-cognitiveservices-speech = "^1.40.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
